# Visual_Group

./: .clang-format  .gitignore  README.md  project.cpp  stocker.cpp
Homework_code/: armor.cpp  back_project.cpp  calibration.cpp  camera.cpp  card.cpp  license.cpp
autoaim/: README.md  launch_fakeio.py  launch_record.py  startup.py  startup_debug.py
autoaim/assets/: MV-CA016-10UC_00K31937955.mfs  base.param.toml  base.param.yaml  blue.txt
autoaim/config/: fakeio.yaml  predictor.yaml  record.yaml  sensor.yaml
autoaim/install/: local_setup.sh  setup.sh
autoaim/install/aimer_base/include/: defs.hpp  robot.hpp
autoaim/install/aimer_base/share/aimer_base/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
autoaim/install/armor_detector/lib/armor_detector/: armor_detector_node
autoaim/install/armor_detector/share/armor_detector/: package.sh
autoaim/install/calib/lib/calib/: calib_node
autoaim/install/calib/share/calib/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
autoaim/install/coreio/lib/coreio/: MiniPC_Node
autoaim/install/coreio/share/coreio/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
autoaim/install/enemy_predictor/lib/enemy_predictor/: enemy_predictor_node
autoaim/install/enemy_predictor/share/enemy_predictor/: local_setup.sh  package.dsv  package.ps1  package.sh
autoaim/install/fast_record/lib/fast_record/: fast_record_node
autoaim/install/fast_record/share/fast_record/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
autoaim/install/file_io/lib/file_io/: fakeio_node
autoaim/install/file_io/share/file_io/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
autoaim/install/io_debug/lib/io_debug/: coreio_node  io_debug_node
autoaim/install/io_debug/share/io_debug/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
autoaim/install/io_debug_v2/lib/io_debug_v2/: io_debug_v2_node
autoaim/install/io_debug_v2/share/io_debug_v2/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
autoaim/install/ros2addon/include/: type_convert.hpp
autoaim/log/: latest_build
autoaim/src/aimer_base/: CMakeLists.txt  package.xml
autoaim/src/aimer_base/include/: armor_defs.hpp
autoaim/src/aimer_base/include/math/filter/: filter.hpp
autoaim/src/aimer_base/src/: math.cpp
autoaim/src/autoaim/armor_detector_node/: CMakeLists.txt  ReadMe.md
autoaim/src/autoaim/armor_detector_node/detector_cuda/: CMakeLists.txt  FindTensorRT.cmake  TRTModule.cpp  TRTModule.hpp
autoaim/src/autoaim/armor_detector_node/launch/: armor_detector.launch.py
autoaim/src/autoaim/armor_detector_node/src/: armor_detector_node.cpp  armor_detector_node.hpp
autoaim/src/autoaim/enemy_predictor_node/: CMakeLists.txt  package.xml
autoaim/src/autoaim/enemy_predictor_node/predictor/: CMakeLists.txt
autoaim/src/autoaim/enemy_predictor_node/predictor/aim/: aim_corrector.cpp  aim_corrector.hpp  detect_bullet.hpp  do_reproj.cpp
autoaim/src/autoaim/enemy_predictor_node/predictor/enemy/: armor_identifier.cpp  armor_identifier.hpp  balance.cpp  balance.hpp  enemy_state.cpp  enemy_state.hpp  outpost_fixer.cpp  outpost_fixer.hpp
autoaim/src/autoaim/enemy_predictor_node/predictor/enemy_predictor/: Stm32Shoot.cpp  Stm32Shoot.hpp  enemy_predictor.cpp  enemy_predictor.hpp
autoaim/src/autoaim/enemy_predictor_node/predictor/motion/: armor_model.cpp  armor_model.hpp  cj_top4_model.cpp  cj_top4_model.hpp  cj_top_model.cpp  cj_top_model.hpp  enemy_model.cpp  enemy_model.hpp  top4_model.cpp  top4_model.hpp  top_model.cpp  top_model.hpp
autoaim/src/autoaim/enemy_predictor_node/predictor/pnp/: pnp.cpp  pnp.hpp
autoaim/src/autoaim/enemy_predictor_node/src/: predictor_node.cpp  predictor_node.hpp
autoaim/src/calib_node/: CMakeLists.txt  package.xml
autoaim/src/calib_node/src/: calib_node.cpp  calib_node.hpp
autoaim/src/calib_node/src/draw_chess/: draw.py
autoaim/src/fast_record/: CMakeLists.txt
autoaim/src/fast_record/src/: record.cpp
autoaim/src/file_io/: CMakeLists.txt
autoaim/src/file_io/config/: sensor.yaml
autoaim/src/file_io/minipc_comm/: CMakeLists.txt  minipc_comm.cpp  minipc_comm.hpp  readme.md  robot_comm_middleware.cpp  robot_comm_middleware.hpp
autoaim/src/file_io/minipc_comm/utils/: CMakeLists.txt  connect.cpp  crc.cpp
autoaim/src/file_io/serial/: CMakeLists.txt
autoaim/src/file_io/serial/include/serial/: serial.h
autoaim/src/file_io/src/: fake_fileio.cpp  file_io.cpp
autoaim/src/io_debug/: CMakeLists.txt  package.xml
autoaim/src/io_debug/minipc_comm/: CMakeLists.txt  minipc_comm.cpp  minipc_comm.hpp  minipc_protocol.hpp  robot.hpp  robot_comm_middleware.cpp  robot_comm_middleware.hpp
autoaim/src/io_debug/minipc_comm/serial_comm/: CMakeLists.txt
autoaim/src/io_debug/minipc_comm/serial_comm/include/: crc.h  fifo_buffer.h
autoaim/src/io_debug/src/: coreio.cpp  coreio_async.cpp  io_debug.cpp
autoaim/src/my_interfaces/: CMakeLists.txt  readme.md
autoaim/src/my_interfaces/msg/: GameStatusMsgBoard2PC.msg  GeneralMsgBoard2PC.msg  RobotStatus.msg
autoaim/src/ros2addon/: CMakeLists.txt
autoaim/src/ros2addon/include/: cv_drawer.hpp  debugger.hpp
autoaim/src/ros2addon/include/coord_convert/: coord_converter.hpp
autoaim/src/ros2addon/src/: coord_converter.cpp  cv_drawer.cpp  debugger.cpp  type_convert.cpp
autoaim/src/sensor_node/: CMakeLists.txt  README.md  package.xml
autoaim/src/sensor_node/ExtImu/: CMakeLists.txt  ExtImu.cpp  ExtImu.hpp
autoaim/src/sensor_node/config/: camera_info.yaml
autoaim/src/sensor_node/serial/: CMakeLists.txt
autoaim/src/sensor_node/src/: sensor_node.cpp  sensor_node.hpp
autoaim/src/web_debugger/: package.xml  setup.cfg  setup.py
autoaim/src/web_debugger/templates/: edit-param.html  index.html  node_img.html  node_info.html
autoaim/src/web_debugger/templates/static/css/: edit-param.css  index.css
autoaim/tep/: connect.h  fifo_buffer.cpp
(+196 files in other folders)
